compute and store the limit violations after the loadflow (#67)
* compute and store the limit violations after the loadflow

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>