@@ -8,9 +8,11 @@ package org.gridsuite.loadflow.server.repositories;
 
 import com.powsybl.loadflow.LoadFlowResult;
 import lombok.AllArgsConstructor;
+import org.gridsuite.loadflow.server.dto.LimitViolationInfos;
 import org.gridsuite.loadflow.server.dto.LoadFlowStatus;
 import org.gridsuite.loadflow.server.entities.ComponentResultEntity;
 import org.gridsuite.loadflow.server.entities.GlobalStatusEntity;
+import org.gridsuite.loadflow.server.entities.LimitViolationsEntity;
 import org.gridsuite.loadflow.server.entities.LoadFlowResultEntity;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
@@ -30,6 +32,8 @@ public class LoadFlowResultRepository {
     private GlobalStatusRepository globalStatusRepository;
 
     private ResultRepository resultRepository;
+
+    private LimitViolationsRepository limitViolationsRepository;
 
     private static LoadFlowResultEntity toResultEntity(UUID resultUuid, LoadFlowResult result) {
         Set<ComponentResultEntity> componentResults = result.getComponentResults().stream()
@@ -60,16 +64,24 @@ public class LoadFlowResultRepository {
     public void insertStatus(List<UUID> resultUuids, LoadFlowStatus status) {
         Objects.requireNonNull(resultUuids);
         globalStatusRepository.saveAll(resultUuids.stream()
-                .map(uuid -> toStatusEntity(uuid, status)).collect(Collectors.toList()));
+                .map(uuid -> toStatusEntity(uuid, status)).toList());
     }
 
     @Transactional
-    public void insert(UUID resultUuid, LoadFlowResult result, LoadFlowStatus status) {
+    public void insert(UUID resultUuid,
+                       LoadFlowResult result,
+                       LoadFlowStatus status,
+                       List<LimitViolationInfos> limitViolationInfos) {
         Objects.requireNonNull(resultUuid);
         if (result != null) {
             resultRepository.save(toResultEntity(resultUuid, result));
         }
         globalStatusRepository.save(toStatusEntity(resultUuid, status));
+        limitViolationsRepository.save(toLimitViolationsEntity(resultUuid, limitViolationInfos));
+    }
+
+    private static LimitViolationsEntity toLimitViolationsEntity(UUID resultUuid, List<LimitViolationInfos> limitViolationInfos) {
+        return new LimitViolationsEntity(resultUuid, limitViolationInfos);
     }
 
     @Transactional
@@ -77,6 +89,7 @@ public class LoadFlowResultRepository {
         Objects.requireNonNull(resultUuid);
         globalStatusRepository.deleteByResultUuid(resultUuid);
         resultRepository.deleteByResultUuid(resultUuid);
+        limitViolationsRepository.deleteByResultUuid(resultUuid);
     }
 
     @Transactional(readOnly = true)
@@ -89,6 +102,7 @@ public class LoadFlowResultRepository {
     public void deleteAll() {
         globalStatusRepository.deleteAll();
         resultRepository.deleteAll();
+        limitViolationsRepository.deleteAll();
     }
 
     @Transactional(readOnly = true)
@@ -98,4 +112,9 @@ public class LoadFlowResultRepository {
         return globalEntity != null ? globalEntity.getStatus() : null;
     }
 
+    @Transactional(readOnly = true)
+    public Optional<LimitViolationsEntity> findLimitViolations(UUID resultUuid) {
+        Objects.requireNonNull(resultUuid);
+        return limitViolationsRepository.findByResultUuid(resultUuid);
+    }
 }
